# agentmarket

./: README.md
agentmarket-opensource/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  seed.py  start.bat
agentmarket-opensource/alembic/: env.py  script.py.mako
agentmarket-opensource/app/: __init__.py  config.py  database.py  exceptions.py
agentmarket-opensource/app/api/: admin.py  agents.py  auth.py  deps.py  orders.py
agentmarket-opensource/app/middleware/: rate_limit.py
agentmarket-opensource/app/models/: __init__.py  agent.py  deployment.py  misc.py  order.py  review.py  user.py
agentmarket-opensource/app/schemas/: __init__.py  agent.py  auth.py  common.py  order.py
agentmarket-opensource/app/services/: auth_service.py  deploy_service.py  github_service.py
agentmarket-opensource/app/utils/: response.py  security.py
agentmarket-opensource/static/css/: style.css
agentmarket-opensource/static/js/: app.js
agentmarket-opensource/templates/: base.html  index.html
agentmarket-opensource/templates/admin/: agents.html  dashboard.html  users.html
agentmarket-opensource/templates/auth/: login.html  register.html
agentmarket-opensource/templates/dashboard/: index.html  settings.html  settings_content.html
agentmarket-opensource/templates/explore/: detail.html  index.html
agentmarket-opensource/templates/fragments/: agent_grid.html
agentmarket-opensource/templates/partials/: agent_card.html  footer.html  (+2 more)
